# novelai_api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Check.yml  Clippy.yml  Publish.yml  Tests.yml
src/api/: mod.rs
src/model/: mod.rs
